// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List block transforms to Columns block 1`] = `
"<!-- fp:columns -->
<div class="fp-block-columns"><!-- fp:column {"width":"100%"} -->
<div class="fp-block-column" style="flex-basis:100%"><!-- fp:list -->
<ul class="fp-block-list"><!-- fp:list-item -->
<li>First Item</li>
<!-- /fp:list-item -->

<!-- fp:list-item -->
<li>Second Item</li>
<!-- /fp:list-item -->

<!-- fp:list-item -->
<li>Third Item</li>
<!-- /fp:list-item --></ul>
<!-- /fp:list --></div>
<!-- /fp:column --></div>
<!-- /fp:columns -->"
`;

exports[`List block transforms to Group block 1`] = `
"<!-- fp:group {"layout":{"type":"constrained"}} -->
<div class="fp-block-group"><!-- fp:list -->
<ul class="fp-block-list"><!-- fp:list-item -->
<li>First Item</li>
<!-- /fp:list-item -->

<!-- fp:list-item -->
<li>Second Item</li>
<!-- /fp:list-item -->

<!-- fp:list-item -->
<li>Third Item</li>
<!-- /fp:list-item --></ul>
<!-- /fp:list --></div>
<!-- /fp:group -->"
`;

exports[`List block transforms to Heading block 1`] = `
"<!-- fp:heading -->
<h2 class="fp-block-heading">First Item</h2>
<!-- /fp:heading -->

<!-- fp:heading -->
<h2 class="fp-block-heading">Second Item</h2>
<!-- /fp:heading -->

<!-- fp:heading -->
<h2 class="fp-block-heading">Third Item</h2>
<!-- /fp:heading -->"
`;

exports[`List block transforms to Paragraph block 1`] = `
"<!-- fp:paragraph -->
<p>First Item</p>
<!-- /fp:paragraph -->

<!-- fp:paragraph -->
<p>Second Item</p>
<!-- /fp:paragraph -->

<!-- fp:paragraph -->
<p>Third Item</p>
<!-- /fp:paragraph -->"
`;

exports[`List block transforms to Quote block 1`] = `
"<!-- fp:quote -->
<blockquote class="fp-block-quote"><!-- fp:list -->
<ul class="fp-block-list"><!-- fp:list-item -->
<li>First Item</li>
<!-- /fp:list-item -->

<!-- fp:list-item -->
<li>Second Item</li>
<!-- /fp:list-item -->

<!-- fp:list-item -->
<li>Third Item</li>
<!-- /fp:list-item --></ul>
<!-- /fp:list --></blockquote>
<!-- /fp:quote -->"
`;
